# local-rag-persona-simulator

./: .env.example  README.md  pyproject.toml  requirements.txt
src/local_rag_persona_simulator/: __init__.py  cli.py  config.py
src/local_rag_persona_simulator/core/: __init__.py  chatbot.py  rag.py  transcript.py
src/local_rag_persona_simulator/utils/: __init__.py  text_utils.py
tests/: __init__.py  test_local_rag_persona_simulator.py
